# GENAI-Basics

Day-1/: .gitignore  01.zero-short.py  02.few-short.py  03.COT.py  04.COT-analize-deepseak.py  05.persona.py  ollama.py  pyproject.toml  web-appy.py
Day-1/prompting/: chain-of-thought.md  few-short.md  persona.md  zero-short.md
Day-2/: 00.date.py  01.weather-1.py  02.weather-2.py  pyproject.toml
Day-2/prompting/: weather-agent.md
Day-2/snake-game/: index.html  script.js  styles.css
Day-3/: .gitignore  00.Indexing.py  01.chat.py  pyproject.toml  test.md
Day-3/prompt/: prompt.md
