[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.15",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "ollama>=0.5.1",
    "openai>=1.98.0",
    "requests>=2.32.4",
    "sentence-transformers>=5.0.0",
]
